--- a/css/style.css
+++ b/css/style.css
@@ -8,23 +8,28 @@ html {
 body {
   margin: 0;
 }
-.header {
+
+
+.navbar {
   position: sticky;
   top: 0;
-}
-.navbar {
   background-color: black;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  padding: 4px 32px;
+  padding: 4px 32px
+
+  ;
 }
 
+
 .logo {
+  text-decoration: none;
   color: white;
-  font-size: 24px;
+  font-size: 36px;
+  background-color: transparent;
 }
 .menu {
   list-style: none;
@@ -34,12 +39,13 @@ body {
   flex-direction: row;
   width: 100%;
   justify-content: flex-end;
+  
 }
 .menu a {
   color: white;
   text-decoration: none;
   background-color: transparent;
-  font-size: 16px;
+  font-size: 20px;
   padding: 4px 16px;
   margin: 0px 4px;
   border: 0px solid transparent;
@@ -49,13 +55,82 @@ body {
 .menu a:hover {
   background-color: blue;
 }
-#portfolio {
-  padding-left: 25px;
+
+#starter {
+  background-color: rgb(255, 113, 11);
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding-left: 450px;
+  padding-right: 450px;
+  padding-top: 165px;
+  padding-bottom: 165px;
+  font-size: 36px;
+  
 }
-#about {
-  padding-left: 25px;
+#hobi {
+  color: white;
+  padding-top: 200px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  font-size: 172px;
+}
+#hobilist {
+  color: white;
+  font-size: 32px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding-top: 100px;
+  padding-bottom: 200px;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+#cat {
+  display: flex;
+  font-size: 72px;
+  justify-content: center;
+  padding-top: 150px;
+  padding-bottom: 80px;
+}
+#catphoto {
+background-color: white;
+display: flex;
+justify-content: space-around;
+align-items: center;
+padding-left: 70px;
+padding-right: 70px;
+
+padding-bottom: 200px;
+}
+#cattext {
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column
+  
+}
+#contact {
+  background-color: rgb(106, 106, 106);
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: 72px;
+  padding-top: 200px;
 }
 #contacts {
-  padding-left: 25px;
-  background-color: beige;
+  background-color: rgb(106, 106, 106);
+  display: flex;
+  padding-top: 100px;
+  font-size: 32px;
+  text-decoration: none;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 200px;
 }
