--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,151 @@ html {
 
 body {
   margin: 0;
+  font-family: Jura;
+}
+h1, h2 {
+  margin: 0;
+}
+
+.navbar {
+  position: sticky;
+  top: 0;
+  background-color: black;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center;
+  padding: 4px 32px;
+}
+
+
+.logo {
+  text-decoration: none;
+  color: white;
+  font-size: 42px;
+  background-color: transparent;
+ 
+}
+.menu {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: flex-end;
+ 
+  
+}
+.menu a {
+  color: white;
+  text-decoration: none;
+  background-color: transparent;
+  font-size: 24px;
+  padding: 4px 16px;
+  margin: 0px 4px;
+  border: 0px solid transparent;
+  border-radius: 16px;
+ 
+}
+
+.menu a:hover {
+  color: rgb(215, 98, 15);
+ }
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.intro {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background: url(../images/leaf.JPG) center no-repeat;
+  background-size: cover;
+}
+.intro_inner{
+  width: 100%;
+  max-width: 880px;
+  margin: 0 auto;
+  text-align: center;
+
+}
+.intro_title {
+  color: #fff;
+  font-size: 100px;
+  font-weight: 700;
+  text-align: left;
+  line-height: 1;
+}
+.intro_sup {
+  margin-top: 70px;
+  font-size: 40px;
+  color: #fff;
+  text-align: left;
+}
+.intro_sup:after {
+  content: "";
+  display: block;
+  width: 450px;
+  height: 3px;
+  background-color: #fff;
+  margin: 30px 0px;
+  margin-bottom: 90px;
+}
+.btn {
+display: inline-block;
+vertical-align: top;
+padding: 8px 20px;
+border: 3px solid #fff;
+color: #fff;
+font-size: 20px;
+font-weight: 900;
+text-decoration: none;
+border-radius: 20px;
+}
+.btn:hover {
+  background-color: #fff;
+  color: black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* {
+  box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
 }
 
 
@@ -50,6 +195,7 @@ body {
   margin: 0px 4px;
   border: 0px solid transparent;
   border-radius: 16px;
+  
 }
 
 .menu a:hover {
@@ -134,3 +280,4 @@ padding-bottom: 200px;
   align-items: center;
   padding-bottom: 200px;
 }
+
