--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,10 @@ h1, h2 {
 .menu a:hover {
   color: rgb(215, 98, 15);
  }
-.container {
+
+ /*intro*/
+
+.container_01 {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -99,16 +102,16 @@ h1, h2 {
   width: 450px;
   height: 3px;
   background-color: #fff;
-  margin: 30px 0px;
+  margin: 20px 0px;
   margin-bottom: 90px;
 }
 .btn {
 display: inline-block;
 vertical-align: top;
-padding: 8px 20px;
+padding: 5px 24px;
 border: 3px solid #fff;
 color: #fff;
-font-size: 20px;
+font-size: 22px;
 font-weight: 900;
 text-decoration: none;
 border-radius: 20px;
@@ -117,6 +120,113 @@ border-radius: 20px;
   background-color: #fff;
   color: black;
 }
+
+/*section_skills*/
+
+.section_2 {
+  padding: 100px 0px;
+ background-color: black;
+}
+
+.container_03 {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto 50px;
+  text-align: center;
+  
+}
+.section_title_ {
+  font-size: 70px;
+  color: #fff;
+}
+
+.skills {
+  display: flex;
+  color: #fff;
+  padding-left: 100px;
+  padding-top: 50px;
+  
+}
+.skills_item {
+  flex: 1 1 0;
+  padding-left: 70px;
+  position: relative;
+  
+}
+.skills_icon {
+  width: 50px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  z-index: 1;
+}
+.skills_title {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 12px;
+}
+.skills_text {
+  font-size: 16px;
+  max-width: 250px;
+}
+
+
+/*section_portfolio*/
+
+.section_3 {
+  padding: 100px 0px;
+  background-color:#fff;
+
+}
+.container_02 {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto 50px;
+  text-align: center;
+}
+.section_title {
+  font-size: 70px;
+  color: black;
+}
+.portfolio {
+  display: flex;
+justify-content: space-between;
+padding: 50px 200px ;
+
+}
+.portfolio_item {
+  width: 282px;
+  position: relative;
+}
+
+.portfolio_item:hover .portfolio_img img{
+  opacity: 0.4;
+}
+.portfolio_item:hover .img_text {
+  opacity: 1;
+}
+
+.portfolio_img img {
+  display: block;
+}
+
+.portfolio_img {
+background: black
+}
+.img_text {
+  width: 100%;
+  opacity: 0;
+  color: #fff;
+  font-size: 24px;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 2;
+  transform: translate3d(0, -50%, 0);
+}
+
+
 
 
 
