--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ border-radius: 20px;
   display: flex;
   color: #fff;
   padding-left: 100px;
-  padding-top: 50px;
+  padding-top: 70px;
   padding-bottom: 100px;
   
 }
@@ -168,6 +168,37 @@ border-radius: 20px;
   font-size: 16px;
   max-width: 250px;
 }
+.skills_2 {
+  display: flex;
+  color: #fff;
+  padding-left: 100px;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  
+}
+.skills_item_2 {
+  flex: 1 1 0;
+  padding-left: 70px;
+  position: relative;
+  
+}
+.skills_icon_2 {
+  width: 50px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  z-index: 1;
+}
+.skills_title_2 {
+  font-size: 22px;
+  text-transform: uppercase;
+  margin-bottom: 12px;
+}
+.skills_text_2 {
+  font-size: 16px;
+  max-width: 250px;
+}
+
 
 /*section_portfolio*/
 
