--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ h3 {
   width: 100%;
   align-items: center;
   padding: 4px 32px;
+  z-index: 99;
 }
 .logo {
   text-decoration: none;
@@ -70,7 +71,7 @@ h3 {
   justify-content: center;
   width: 100%;
   height: 100vh;
-  background: url(../images/leaf.JPG) center no-repeat;
+  background: url(../images/leaf.jpg) center no-repeat;
   background-size: cover;
 }
 .intro_inner {
