--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,6 @@ h3 {
   color: white;
   font-size: 42px;
   background-color: transparent;
-  
 }
 .menu {
   list-style: none;
@@ -124,16 +123,14 @@ h3 {
   background-color: rgb(215, 98, 15);
   display: flex;
   justify-content: center;
-
-  
 }
 .about_inner {
   display: flex;
   max-width: 1100px;
 }
-.about_img, 
+.about_img,
 .about_content {
-width: 50%;
+  width: 50%;
 }
 .about_title {
   font-size: 55px;
@@ -150,9 +147,9 @@ width: 50%;
   font-size: 16px;
 }
 .imge {
-display: block;
-max-width: 450px;
-height: auto;
+  display: block;
+  max-width: 450px;
+  height: auto;
 }
 
 /*section_skills*/
@@ -252,7 +249,7 @@ height: auto;
   padding: 50px 200px;
 }
 .portfolio_item {
-  width: 282px;
+  width: 300px;
   position: relative;
 }
 .portfolio_item:hover .portfolio_img img {
@@ -281,6 +278,46 @@ height: auto;
   z-index: 2;
   transform: translate3d(0, -50%, 0);
 }
-/*.no{
-max-width: 50px;
+
+/*contact*/
+
+.section_4 {
+  padding: 100px 0px;
+  background-color: gray;
+}
+
+.container_04 {
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto 50px;
+  text-align: center;
+}
+.section_title_4 {
+  font-size: 70px;
+  color: #fff;
+}
+
+.contacts {
+  display: flex;
+  color: #fff;
+  padding-left: 100px;
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+.contact_item {
+  flex: 1 1 0;
+  padding-left: 70px;
+  position: relative;
+}
+.contact_icon {
+  width: 50px;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  z-index: 1;
+}
+.contact_title {
+  font-size: 35px;
+  text-transform: uppercase;
+  margin-bottom: 22px;
 }
