--- a/css/style.css
+++ b/css/style.css
@@ -259,13 +259,17 @@ h3 {
 /*contact*/
 
 .section_4 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   padding: 100px 0px;
   background-color: rgb(47, 47, 47);
+  
 }
 
 .container_04 {
   width: 100%;
-  max-width: 300px;
+  max-width: 500px;
   margin: 0 auto 50px;
   text-align: center;
 }
@@ -276,25 +280,44 @@ h3 {
 
 .contacts {
   display: flex;
+  justify-content: space-between;
   color: #fff;
-  padding-left: 100px;
+  padding-left: 200px;
   padding-top: 70px;
   padding-bottom: 100px;
+  max-width: 700px;
+ 
+  
+  
 }
 .contact_item {
   flex: 1 1 0;
   padding-left: 70px;
-  position: relative;
+  display: flex;
+  align-items: center;
+  flex-basis: 25%;
+  
+  
 }
 .contact_icon {
-  width: 50px;
-  position: absolute;
-  top: 0;
-  left: 0px;
-  z-index: 1;
+  display: flex;
+  width: 50px
+
 }
 .contact_title {
-  font-size: 35px;
+  color: #fff;
+  padding-left: 20px;
+  font-size: 22px;
   text-transform: uppercase;
-  margin-bottom: 22px;
+  margin-bottom: 12px;
+}
+.container_05 {
+  min-width: 700px;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 50px;
+}
+.section_text_4 {
+  color: #fff;
+  font-size: 50px;
 }
