--- a/css/menu.css
+++ b/css/menu.css
@@ -202,4 +202,24 @@
       margin-bottom: 90px;
     }
   }
-
+  @media (max-width: 1000px) { /*portfolio*/
+    .section_3 {
+      padding-top: 100px;
+      padding-bottom: 150px;
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .portfolio {
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 40px;
+    
+    }
+    .portfolio_item {
+      width: 300px;
+      position: relative;
+      
+    }
+  }
