--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,8 @@ h3 {
 /*section_portfolio*/
 
 .section_3 {
-  padding: 100px 0px;
+  padding-top: 100px;
+  padding-bottom: 150px;
   background-color: #fff;
 }
 .container_04 {
@@ -223,8 +224,10 @@ h3 {
 }
 .portfolio {
   display: flex;
-  justify-content: space-between;
-  padding: 50px 200px;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 30px 0;
+  column-gap: 60px;
 }
 .portfolio_item {
   width: 300px;
